@@ -1,6 +1,5 @@
 /*
- * reserved comment block
- * DO NOT REMOVE OR ALTER!
+ * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
  */
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -425,7 +424,7 @@ public class JavaClass extends AccessFlags implements Cloneable, Node {
     }
 
     if(debug != null)
-      JavaClass.debug = new Boolean(debug).booleanValue();
+      JavaClass.debug = Boolean.valueOf(debug);
 
     if(sep != null)
       try {
